fix: better flex alignment of label span

--- a/packages/multiple-select-vanilla/src/styles/multiple-select.scss
+++ b/packages/multiple-select-vanilla/src/styles/multiple-select.scss
@@ -125,7 +125,8 @@
   > {
     span {
       display: flex;
-      flex-grow: 1;
+      flex: 1;
+      align-items: center;
       column-gap: 4px;
       white-space: nowrap;
       overflow: hidden;
